# midi-visualiser

./: README.md  main.py  piano_display.py  piano_display_settings.py  pyproject.toml  requirements.txt  scrolling_note.py  song.py  visualiser.py
src/midi_visualiser/: main.py  piano_display.py  visualiser.py
