[project]
name = "midi-visualiser"
version = "0.1.0"
description = "A real-time MIDI player and visualiser built in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "mido>=1.3.3",
    "pygame>=2.6.1",
]

[project.scripts]
visualiser = "midi_visualiser.main:main"